<resources>
    <string name="app_name">识货</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">微视频</string>
    <string name="tab_server">便民服务</string>
    <string name="tab_me">我的</string>
    <string name="search_hint_text">请输入商品、店铺名称</string>
    <string name="sales">商品销量 %1$s</string>
    <string name="stock_max">库存 %1$s</string>
    <string name="price">￥%1$s</string>
    <string name="video_autolabel_title">视频类型</string>
    <string name="service_autolabel_title">便民服务类型</string>
    <string name="list_title">热销商品</string>
    <string name="fav_goods">商品收藏</string>
    <string name="fav_shops">店铺收藏</string>
    <string name="fav_videos">微视频收藏</string>
    <string name="fav_services">便民收藏</string>
    <string name="me_order_item">我的订单</string>
    <string name="me_add_item">我的收货地址</string>
    <string name="me_recommend_item">推荐给朋友</string>
    <string name="me_enter_item">我要入驻</string>
    <string name="shore_type_check">店铺审核中</string>
    <string name="shore_type_success">我的店铺</string>
    <string name="me_service_item">客服电话</string>
    <string name="me_qa_item">常见问题</string>
    <string name="me_about_item">关于识货</string>
    <string name="me_feedback_item">意见反馈</string>
    <string name="setting">设置</string>
    <string name="ok">确定</string>
    <string name="me_change_pass_item">修改密码</string>
    <string name="me_bind_mobile_item">修改绑定手机</string>
    <string name="me_push_switch_item">推送开关</string>
    <string name="back">返回</string>
    <string name="logout">退出登录</string>
    <string name="fav_goods_list">商品收藏列表</string>
    <string name="enjoy_video">欣赏</string>
    <string name="fav_shops_list">店铺收藏列表</string>
    <string name="fav_videos_list">微视频收藏列表</string>
    <string name="fav_services_list">我的便民收藏列表</string>
    <string name="myorder_list">我的订单</string>
    <string name="order_all">全部</string>
    <string name="order_paid">待发货</string>
    <string name="order_sended">待收货</string>
    <string name="order_completed">已完成</string>
    <string name="order_after_sale">售后</string>
    <string name="myaddress_list">我的收货地址</string>
    <string name="feedback_hint">请输入您的宝贵意见</string>
    <string name="commit_feedback">提交反馈</string>
    <string name="feedback_title">意见反馈</string>
    <string name="prefix_oldpass">旧&#160;&#160;密&#160;&#160;码</string>
    <string name="hint_old_pass">请输入旧密码</string>
    <string name="hint_new_pass">请输入新密码</string>
    <string name="prefix_newpass">新&#160;&#160;密&#160;&#160;码</string>
    <string name="prefix_check_newpass">再次输入</string>
    <string name="hint_check_new_pass">请再次输入新密码</string>
    <string name="commit">提交</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="change_password">修改密码</string>
    <string name="prefix_mobile_bind">新手机号</string>
    <string name="prefix_old_mobile_bind">旧手机号</string>
    <string name="hint_mobile_number">请输入手机号</string>
    <string name="prefix_verify">验证码：</string>
    <string name="hint_verify">请输入验证码</string>
    <string name="verify">验证码</string>
    <string name="change_mobile">修改绑定手机</string>
    <string name="ten_prefecture">10元专区</string>
    <string name="twenty_prefecture">20元专区</string>
    <string name="thirty_prefecture">30元专区</string>
    <string name="forty_prefecture">40元专区</string>
    <string name="goods_detail">商品详情</string>
    <string name="shops">店铺</string>
    <string name="service">客服</string>
    <string name="share">分享</string>
    <string name="buy_now">立即购买</string>
    <string name="shopping_cart">加入购物车</string>
    <string name="customer_name_prefix">用户名：</string>
    <string name="password_prefix">密&#160;&#160;&#160;&#160;码：</string>
    <string name="customer_name_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="regist_account">用户注册</string>
    <string name="login">登录</string>
    <string name="prefix_phonenumber">手&#160;&#160;机&#160;&#160;号</string>
    <string name="phone_number">请输入手机号</string>
    <string name="get_verify">获取手机验证码</string>
    <string name="prefix_verify_forget_pass">验&#160;&#160;证&#160;&#160;码</string>
    <string name="prefix_newpass_forget_pass">新&#160;&#160;密&#160;&#160;码</string>
    <string name="input_verfiy_code">请输入验证码</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="complete">完成</string>
    <string name="reset_pass">找回密码</string>
    <string name="prefix_nickname">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称</string>
    <string name="hint_nickname">请输入昵称（不能更改）</string>
    <string name="prefix_pass_register">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="hint_input_pass_register">请输入密码</string>
    <string name="agin_pass_prefix">再次输入</string>
    <string name="input_pass_agin">再次输入密码</string>
    <string name="regist">注册</string>
    <string name="error_nickname">昵称不能为空</string>
    <string name="error_input_pass">密码不能为空</string>
    <string name="error_correct_verify">两次输入的密码不一致</string>
    <string name="error_phonenum">手机号不能为空</string>
    <string name="error_verify_coode">验证码不能为空</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="default_address">默认地址</string>
    <string name="new_address">新增地址</string>
    <string name="consignee_prefix">收货人姓名：</string>
    <string name="hint_consignee">请输入姓名</string>
    <string name="prefix_phonenumber_address">手机号码：</string>
    <string name="province_prefix">省市区：</string>
    <string name="hint_province">请输入省市区</string>
    <string name="address_prefix">详细地址：</string>
    <string name="hint_address">请输入详细地址</string>
    <string name="new_address_title">新增收货地址</string>
    <string name="save">保存</string>
    <string name="edit_address_title">编辑地址</string>
    <string name="hint_shopname">请输入店铺名称</string>
    <string name="hint_shop_desc">请输入店铺描述</string>
    <string name="exit_show">再按一次退出程序</string>
    <string name="mall_price_text">&#165;%s</string>
    <string name="hint_upload_shop_logo">点击上传店铺logo</string>
    <string name="hint_upload_id_card_hand">手持身份证或营业执照</string>
    <string name="hint_name_shoplocated">请输入姓名（必须为身份证名称银行卡绑定姓名）</string>
    <string name="hint_idcard_shoplocated">请输入身份证号</string>
    <string name="hint_upload_shop_idcard_positive">点击上传身份证正面照</string>
    <string name="hint_upload_shop_idcard_reverse">点击上传身份证背面照</string>
    <string name="hint_bank">请输入银行卡号</string>
    <string name="hint_bank_again">再次输入银行卡号</string>
    <string name="shoplocated_notice">我已仔细阅读识货开店须知</string>
    <string name="shoplocated_protocol">《识货开店须知》</string>
    <string name="shihuo_shop">识货商铺版</string>
    <string name="btn_shoplocated_commit">提交审核</string>
    <string name="sotck_max">库存%1$s件</string>

    <!-- 系统 -->
    <string name="xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开获取最新</string>
    <string name="xlistview_header_hint_loading">懂球帝正在加载</string>
    <string name="xlistview_header_last_time">最近更新：</string>
    <string name="xlistview_footer_hint_normal">加载更多</string>
    <string name="xlistview_footer_hint_notdata">已无更多信息</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_refresh">已无更多信息</string>
    <string name="network_not_good">网络不是很好</string>
    <string name="refresh_retry">刷新重试</string>
    <string name="no_data">暂无数据</string>
    <string name="progressbar_dialog_txt">请稍后...</string>

    <!-- toast -->
    <string name="toast_verify_code">验证码发送成功</string>
    <string name="fix_password">密码修改成功</string>
    <string name="register_success">注册成功</string>
    <string name="toast_shore_type_check">您的店铺正在审核中,请耐心等待</string>
    <string name="toast_no_phone">该店铺暂时还没有客服电话</string>
    <string name="toast_count_cant_delete">不能再减少啦</string>
    <string name="toast_is_max">已达到商品可购买最大数量了哦</string>

    <string name="error_shopname">请输入店铺名称</string>
    <string name="error_username">请输入姓名</string>
    <string name="error_idcardnumber">请输入身份证号</string>
    <string name="error_bankcard">请输入银行卡号</string>
    <string name="error_bankcard_again">再次输入银行卡号</string>
    <string name="new_shop_notice">请仔细阅读开店须知</string>
    <string name="error_upload_shop_logo">请上传店铺log</string>
    <string name="error_upload_idcard_positive">请上传身份证正面照</string>
    <string name="error_upload_idcard_reverse">请上传身份证背面照</string>
    <string name="error_upload_idcard_hand">请上传手持证件照</string>
    <string name="shoplocated_ok">商家入驻申请已提交</string>
    <string name="shihuo_shop_main">识货商铺版</string>
    <string name="hint_goodsname">请输入商品名称</string>
    <string name="hint_goodsdesc">请添加商品描述</string>
    <string name="hint_upload_scroller_images">请上传商品（滑动）图片</string>
    <string name="hint_upload_details_images">请上传商品详情图片</string>
    <string name="hint_distribution">请选择配送方式</string>
    <string name="exemption">同城包邮(国内包邮联系商家)</string>
    <string name="pick_up">到店取货</string>
    <string name="kuaidian_distribution">同城配送3元(货到付配送费)</string>
    <string name="shop_type_manager">商品分类页面</string>
    <string name="title_publish_new_goods">发布新品页面</string>
    <string name="prefix_original">原价：</string>
    <string name="hint_original">请输入原价</string>
    <string name="prefix_current">现价：</string>
    <string name="hint_current">请输入现价</string>
    <string name="prefix_repertory">库存：</string>
    <string name="hint_repertory">请输入库存</string>
    <string name="prefix_standard">规格：</string>
    <string name="hint_standard">请输入规格（例：白色-42）</string>
    <string name="phone_code">秒后重新获取</string>
    <string name="delivery">配送方式:</string>
    <string name="delivery1">上门取货</string>
    <string name="delivery2">物流配送(同城3元)</string>
    <string name="delivery3">包邮</string>
    <string name="publis_goods_ok">商品发布成功</string>
    <string name="shopmanager_list_title">商品管理列表</string>
    <string name="title_edit_goods">编辑商品页面</string>
    <string name="shopsetting_service_number">客服电话</string>
    <string name="shopsetting_desc">店铺主营</string>
    <string name="shopsetting_notice">店铺公告</string>
    <string name="shopsetting_pic">店铺门头图片</string>
    <string name="shopsetting_fress_of_charge">设置店铺免费配送价格</string>
    <string name="shopsetting_qr_code">店铺二维码</string>
    <string name="shopsetting_delivery_time">设置配送时间</string>
    <string name="shopsetting_business_time">设置店铺营业时间</string>
    <string name="shopsetting_shop_address">设置商铺地址</string>
    <string name="hint_shopsetting_service_number">请输入客服电话</string>
    <string name="hint_shopsetting_desc">请输入店铺主营</string>
    <string name="hint_shopsetting_notice">请输入店铺公告</string>
    <string name="hint_shopsetting_pic">店铺门头图片</string>
    <string name="hint_shopsetting_fress_of_charge">设置店铺免费配送价格</string>
    <string name="hint_shopsetting_qr_code">查看店铺二维码</string>
    <string name="hint_shopsetting_delivery_time">请输入配送时间</string>
    <string name="hint_shopsetting_business_time">请输入店铺营业时间</string>
    <string name="hint_shopsetting_shop_address">请输入商铺地址</string>
    <string name="shopsetting">商铺设置</string>
    <string name="goods_info_update_ok">设置成功</string>
    <string name="tab_today">今日统计</string>
    <string name="tab_month">今月统计</string>
    <string name="tab_year">今年统计</string>
    <string name="shop_statistics_title">商铺统计页面</string>
    <string name="check_all">全选</string>
    <string name="settlement">去结算</string>
    <string name="title_shoppingcar">我的购物车</string>
    <string name="title_circle_list">商圈列表</string>
    <string name="goodslist_by_type">商品列表页面（%1$s）</string>
    <string name="goodslist_title">商品列表</string>
    <string name="syssecond_type">系统二级分类</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
</resources>
