<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/btn_shop"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="bottom|center_horizontal"
        android:text="@string/shops" />


    <TextView
        android:id="@+id/btn_service"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="bottom|center_horizontal"
        android:text="@string/service" />

    <TextView
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="bottom|center_horizontal"
        android:text="@string/share" />

    <TextView
        android:id="@+id/btn_shopping_card"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/shopping_cart" />

    <TextView
        android:id="@+id/btn_buy_now"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/buy_now" />

</LinearLayout>