<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar_layout" />

    <LinearLayout
        android:id="@+id/layout_mobile_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefix_oldpass"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/edit_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_old_pass" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_mobile_bind"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefix_newpass"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/edit_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_pass" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_check_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_new_pass"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefix_check_newpass"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/edit_check_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_check_new_pass" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="200dp"
        android:layout_height="@dimen/single_btn_height"
        android:layout_below="@id/layout_check_new_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/commit" />

    <TextView
        android:id="@+id/btn_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/forget_pass"
        android:textSize="@dimen/h3"
        android:textStyle="italic" />
</RelativeLayout>