<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:fitsSystemWindows="true"
    tools:context="com.shihuo.shihuo.MainActivity">


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line"
        android:background="@color/ba_color">

    </android.support.v4.view.ViewPager>

    <View
        android:id="@+id/line"
        style="@style/style_divider_horizontal"
        android:layout_width="match_parent"
        android:layout_above="@+id/tabbar"
        android:background="@mipmap/tab_bottom_shadow" />

    <RadioGroup
        android:id="@+id/tabbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="3dp">

        <RadioButton
            android:id="@+id/home"
            style="@style/tabbar_button"
            android:drawableTop="@drawable/tab_home_bg"
            android:text="@string/tab_home" />

        <RadioButton
            android:id="@+id/video"
            style="@style/tabbar_button"
            android:drawableTop="@drawable/tab_video_bg"
            android:text="@string/tab_video" />

        <RadioButton
            android:id="@+id/service"
            style="@style/tabbar_button"
            android:drawableTop="@drawable/tab_service_bg"
            android:text="@string/tab_server" />

        <RadioButton
            android:id="@+id/me"
            style="@style/tabbar_button"
            android:drawableTop="@drawable/tab_me_bg"
            android:text="@string/tab_me" />
    </RadioGroup>


</RelativeLayout>
