<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                style="@style/style_edittex"
                android:hint="@string/hint_mobile_number" />

            <EditText
                style="@style/style_edittex"
                android:hint="@string/hint_verify" />

            <EditText
                style="@style/style_edittex"
                android:hint="@string/hint_shopname" />

            <EditText
                style="@style/style_edittex"
                android:gravity="left"
                android:hint="@string/hint_shop_desc"
                android:minLines="4" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/shop_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.AppCompatSpinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/shop_area_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.AppCompatSpinner>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/shop_add_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>